# redis_queue_poc

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: app.py  redis_task.py  utils.py  worker.py
src_async/: app.py  config.py  redis_task.py  utils.py  worker.py
